update copyright and Ray Summit info

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Anyscale Academy - Training on Ray and the Ray Ecosystem\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](images/AnyscaleAcademyLogo.png)\n",
     "\n",
@@ -21,12 +21,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Join Us at Ray Summit 2020!\n",
+    "## Join Us at Ray Summit 2021!\n",
     "\n",
-    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "Join us for the [_free_ Ray Summit 2021 virtual conference](https://www.anyscale.com/ray-summit-2021) on June 22-24, 2021. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
     "<a href=\"https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy\">\n",
-    "<img src=\"images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2020\"/>\n",
+    "<img src=\"images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2021\"/>\n",
     "</a>\n",
     "\n",
     "For information about other online events, see [anyscale.com/events](https://anyscale.com/events)."
