--- a/advanced-ray/00-Advanced-Ray-Overview.ipynb
+++ b/advanced-ray/00-Advanced-Ray-Overview.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Advanced Ray - Overview\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademyLogo.png)\n",
     "\n",
@@ -18,11 +18,11 @@
     "\n",
     "> **Tip:** Recall that the [Ray Package Reference](https://docs.ray.io/en/latest/package-ref.html) in the [Ray Docs](https://docs.ray.io/en/latest/) is useful for exploring the API features we'll learn.\n",
     "\n",
-    "## Join Us at Ray Summit 2020!\n",
+    "## Join Us at Ray Summit 2021!\n",
     "\n",
-    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "Join us for the [_free_ Ray Summit 2021 virtual conference](https://www.anyscale.com/ray-summit-2021) on June 22-24, 2021. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "![Ray Summit 2020](../images/raysummit-horizontal-white-banner-full.png)"
+    "![Ray Summit 2021](../images/raysummit-horizontal-white-banner-full.png)"
    ]
   },
   {
