--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Ray Crash Course - Exploring Ray API Calls\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademyLogo.png)\n",
     "\n",
@@ -51,7 +51,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Ray Dashboard: http://{ray.get_webui_url()}')"
+    "print(f'Ray Dashboard: http://{ray.get_dashboard_url()}')"
    ]
   },
   {
@@ -195,7 +195,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f'http://{ray.get_webui_url()}'"
+    "f'http://{ray.get_dashboard_url()}'"
    ]
   },
   {
@@ -227,7 +227,7 @@
     "| :----- | :---------------- |\n",
     "| [`ray.get_gpu_ids()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.get_gpu_ids) | GPUs |\n",
     "| [`ray.get_resource_ids()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.get_resource_ids) | Resources available to the _worker_ |\n",
-    "| [`ray.get_webui_url()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.get_webui_url) | Ray Dashboard URL |\n",
+    "| [`ray.get_dashboard_url()`](https://github.com/ray-project/ray/blob/master/python/ray/worker.py) | Ray Dashboard URL |\n",
     "| [`ray.nodes()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.nodes) | Cluster nodes |\n",
     "| [`ray.objects()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.objects) | Objects currently in the Object Store |\n",
     "| [`ray.cluster_resources()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.cluster_resources) | All the available resources, used or not |\n",
@@ -246,7 +246,7 @@
     "print(f\"\"\"\n",
     "ray.get_gpu_ids():          {ray.get_gpu_ids()}\n",
     "ray.get_resource_ids():     {ray.get_resource_ids()}\n",
-    "ray.get_webui_url():        {ray.get_webui_url()}\n",
+    "ray.get_dashboard_url():    {ray.get_dashboard_url()}\n",
     "ray.nodes():                {ray.nodes()}\n",
     "ray.objects():              {ray.objects()}\n",
     "ray.cluster_resources():    {ray.cluster_resources()}\n",
