--- a/advanced-ray/02-Ray-Actors-Revisited.ipynb
+++ b/advanced-ray/02-Ray-Actors-Revisited.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Ray Actors Revisited\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademyLogo.png)\n",
     "\n",
@@ -55,7 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Ray Dashboard: http://{ray.get_webui_url()}')"
+    "print(f'Ray Dashboard: http://{ray.get_dashboard_url()}')"
    ]
   },
   {
