--- a/reference/Troubleshooting-Tips-Tricks.ipynb
+++ b/reference/Troubleshooting-Tips-Tricks.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Troubleshooting, Tips, and Tricks\n",
     "\n",
-    "© 2019-2020, Anyscale. All Rights Reserved\n",
+    "© 2019-2021, Anyscale. All Rights Reserved\n",
     "\n",
     "![Anyscale Academy](../images/AnyscaleAcademyLogo.png)"
    ]
@@ -15,12 +15,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Join Us at Ray Summit 2020!\n",
+    "## Join Us at Ray Summit 2021!\n",
     "\n",
-    "Join us for the [_free_ Ray Summit 2020 virtual conference](https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy), September 30 - October 1, 2020. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "Join us for the [_free_ Ray Summit 2021 virtual conference](https://www.anyscale.com/ray-summit-2021) on June 22-24, 2021. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "<a href=\"https://events.linuxfoundation.org/ray-summit/?utm_source=dean&utm_medium=embed&utm_campaign=ray_summit&utm_content=anyscale_academy\">\n",
-    "<img src=\"../images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2020\"/>\n",
+    "<a href=\"https://www.anyscale.com/ray-summit-2021\">\n",
+    "<img src=\"../images/raysummit-horizontal-white-banner-full.png\" alt=\"Ray Summit 2021\"/>\n",
     "</a>\n",
     "\n",
     "For information about other online events, see [anyscale.com/events](https://anyscale.com/events)."
@@ -255,9 +255,9 @@
     "\n",
     "As it executes, `ray.init` prints the dashboard URL.\n",
     "\n",
-    "You can get the URL later if needed using `ray.get_webui_url()`.\n",
+    "You can get the URL later if needed using `ray.get_dashboard_url()`.\n",
     "\n",
-    "> **Tip:** In a notebook, use a cell with `f'http://{ray.get_webui_url()}'`. The full URL printed will be clickable."
+    "> **Tip:** In a notebook, use a cell with `f'http://{ray.get_dashboard_url()}'`. The full URL printed will be clickable."
    ]
   },
   {
