Fix a couple of typos in Tasks notebook

--- a/ray-crash-course/01-Ray-Tasks.ipynb
+++ b/ray-crash-course/01-Ray-Tasks.ipynb
@@ -149,12 +149,12 @@
    "source": [
     "### Let's Start Ray\n",
     "\n",
-    "If you are running these tutorials on your laptop, each notebook will start a mini-cluster when we call `ray.init()` below. They we'll shut it down at the end of the notebook, so be sure to evaluate the last cell in each notebook that calls `ray.shutdown()`.\n",
+    "If you are running these tutorials on your laptop, each notebook will start a mini-cluster when we call `ray.init()` below. Then we'll shut it down at the end of the notebook, so be sure to evaluate the last cell in each notebook that calls `ray.shutdown()`.\n",
     "\n",
     "If you are learning on the Anyscale platform, your environment is already running a Ray cluster with one or more nodes. So, when we call `ray.init()`, it will connect to that running cluster. You should still run the `ray.shutdown()` cell at the end of each notebook, but it won't shutdown the whole cluster.\n",
     "\n",
     "For more details on the options you can pass to `ray.init()`, see lesson 6, [Exploring Ray API Calls](06-Exploring-Ray-API-Calls.ipynb). \n",
-    "If you are interested in the details of running a Ray cluster using the `ray` CLI, see lesson 7, [Running Ray Clusters](07-Running-Ray-Clusters.ipynb) and see also the corresponding [Ray documentation](https://docs.ray.io/en/latest/starting-ray.html#using-ray-on-a-cluster). There is also a script `tools/start-ray.sh` that can you play with. (It was used in an earlier version of these tutorials.)"
+    "If you are interested in the details of running a Ray cluster using the `ray` CLI, see lesson 7, [Running Ray Clusters](07-Running-Ray-Clusters.ipynb) and see also the corresponding [Ray documentation](https://docs.ray.io/en/latest/starting-ray.html#using-ray-on-a-cluster). There is also a script `tools/start-ray.sh` that you can play with. (It was used in an earlier version of these tutorials.)"
    ]
   },
   {
@@ -656,7 +656,7 @@
    "source": [
     "### Exercise 1\n",
     "\n",
-    "As currently written, the memory footprint of `estimate_pi` scales linearly with `N`, because it allocates two NumPy arrays of size `N`. This limits the size of `N` we can evaluate (as I confirmed by locking up my laptop...). However, this isn't actually necessary. We could do the same calculation in \"blocks, for example `m` blocks of size `N/m` and then combine the results. Furthermore, there's no dependencies between the calculations with those blocks, giving us further potential speed-up by parellelizing them with Ray.\n",
+    "As currently written, the memory footprint of `estimate_pi` scales linearly with `N`, because it allocates two NumPy arrays of size `N`. This limits the size of `N` we can evaluate (as I confirmed by locking up my laptop...). However, this isn't actually necessary. We could do the same calculation in blocks, for example `m` blocks of size `N/m` and then combine the results. Furthermore, there's no dependencies between the calculations with those blocks, giving us further potential speed-up by parellelizing them with Ray.\n",
     "\n",
     "Adapt `ray_estimate_pi` to use this technique. Pick some `N` value above which the calculation is done in blocks. Compare the performance of the old vs. new implementation. \n",
     "\n",
