Fix a few typos in notebook 05

--- a/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
+++ b/ray-crash-course/05-Ray-Parallel-Iterators.ipynb
@@ -418,7 +418,7 @@
     "\n",
     "### Fetch Ordering\n",
     "\n",
-    "When using `it.gather_sync().foreach(fn)`, `it.gather_async().foreach(fn)`, or any other transformation after a `gather_*sync`, for a sequence of elements served by a source actor, the function `fn` will be called on those elements in order. In particular, it will be called for element _i_ in the sequence before the next element, _i+1_, is fetched from the source actor. This is useful if you need to update the source actor between iterator steps. Note that for async gather, this ordering only applies _per shard_.\n",
+    "When using `it.gather_sync().for_each(fn)`, `it.gather_async().for_each(fn)`, or any other transformation after a `gather_*sync`, for a sequence of elements served by a source actor, the function `fn` will be called on those elements in order. In particular, it will be called for element _i_ in the sequence before the next element, _i+1_, is fetched from the source actor. This is useful if you need to update the source actor between iterator steps. Note that for async gather, this ordering only applies _per shard_.\n",
     "\n",
     "### Operator State\n",
     "\n",
@@ -497,9 +497,9 @@
     "\n",
     "_Word count_ was called the \"Hello World\" of Hadoop programming, because it's a conceptually simple algorithm that illustrates the _map/reduce_ paradigm of Hadoop programming very well and it was often the first program written by developers learning about Hadoop. \n",
     "\n",
-    "_Word count_ is tedious to write in the original `MapReduce` API, but elegant in [Apache Spark](https://spark.apache.org), which replaced `MapReduce`. Our implementation here is similar to how you would implement it in Spark. The key is to have a powerful, composible set of operations, sometimes called \"operators\" (in the spirit of addition, multiplication, etc.) or [_combinators_](https://en.wikipedia.org/wiki/Combinatory_logic).\n",
+    "_Word count_ is tedious to write in the original `MapReduce` API, but elegant in [Apache Spark](https://spark.apache.org), which replaced `MapReduce`. Our implementation here is similar to how you would implement it in Spark. The key is to have a powerful, composable set of operations, sometimes called \"operators\" (in the spirit of addition, multiplication, etc.) or [_combinators_](https://en.wikipedia.org/wiki/Combinatory_logic).\n",
     "\n",
-    "In _word count_, a corpus of documents is read in parallel processes, where each document is tokenized into words, and the occurrences of each word are counted, then combined into a global word-count dictionary. Usually the results are sorted by frequency of occurrence, descending. The idea is that the most common words are indicative of the major themes of the corpus. Slightly more sophisticated algorithms are [n-grams](https://en.wikipedia.org/wiki/N-gram), which count the short `n`-word phrases, and [inverted index](https://en.wikipedia.org/wiki/Inverted_index), which builds a dictionary of words and the locations the were found, the basis of a search engine!\n",
+    "In _word count_, a corpus of documents is read in parallel processes, where each document is tokenized into words, and the occurrences of each word are counted, then combined into a global word-count dictionary. Usually the results are sorted by frequency of occurrence, descending. The idea is that the most common words are indicative of the major themes of the corpus. Slightly more sophisticated algorithms are [n-grams](https://en.wikipedia.org/wiki/N-gram), which count the short `n`-word phrases, and [inverted index](https://en.wikipedia.org/wiki/Inverted_index), which builds a dictionary of words and the locations the words were found, the basis of a search engine!\n",
     "\n",
     "> **Note:** This code is also available as a complete, standalone example in [word-count.py](word-count.py)."
    ]
