Added missing word, removed excess cell

--- a/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
+++ b/ray-crash-course/06-Exploring-Ray-API-Calls.ipynb
@@ -195,15 +195,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f'http://{ray.get_dashboard_url()}'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "ref = ray.put(\"Hello World!\")\n",
     "print(f'Object returned: {ray.get(ref)}')"
    ]
@@ -278,7 +269,7 @@
    "source": [
     "## ray.timeline()\n",
     "\n",
-    "Sometimes you need to find task bottlenecks. [`ray.timeline()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline) helps. It returns a list of profiling events that can viewed as a timeline. To use the results, the easiest method is to dump the data to a JSON file by passing in `filename=...` argument. Or, you can call `json.dump(filename)` on the returned object. In either case, open chrome://tracing in a Chrome browser window (only Chrome works) and load the dumped file. "
+    "Sometimes you need to find task bottlenecks. [`ray.timeline()`](https://ray.readthedocs.io/en/latest/package-ref.html#ray.timeline) helps. It returns a list of profiling events that can be viewed as a timeline. To use the results, the easiest method is to dump the data to a JSON file by passing in `filename=...` argument. Or, you can call `json.dump(filename)` on the returned object. In either case, open chrome://tracing in a Chrome browser window (only Chrome works) and load the dumped file. "
    ]
   },
   {
