--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -23,9 +23,9 @@
    "source": [
     "## Join Us at Ray Summit 2021!\n",
     "\n",
-    "Join us for the [_free_ Ray Summit 2021 virtual conference](https://www.anyscale.com/ray-summit-2021) on June 22-24, 2021. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
+    "Join us for the [_free_ Ray Summit 2021 virtual conference](http://anyscale.com/ray-summit) on June 22-24, 2021. We have an amazing lineup of luminar keynote speakers and breakout sessions on the Ray ecosystem, third-party Ray libraries, and applications of Ray in the real world.\n",
     "\n",
-    "<a href=\"https://www.anyscale.com/ray-summit-2021\">\n",
+    "<a href=\"http://anyscale.com/ray-summit\">\n",
     "<img src=\"images/raysummit-horizontal-white-banner-full.png\"  width=\"800\" height=\"200\" alt=\"Ray Summit 2021\"/>\n",
     "</a>\n",
     "\n",
