--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -184,7 +184,7 @@
    "id": "appointed-comparative",
    "metadata": {},
    "source": [
-    "The Python file, called `local_model.py` uses the `summarize` function to\n",
+    "The Python file, called `local_model.py`, uses the `summarize` function to\n",
     "generate summaries of text.\n",
     "\n",
     "- The `summarizer` variable on line 7 inside `summarize` points to a\n",
