Improve formatting on router section

--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -407,7 +407,7 @@
     "For more complex validation, you can also use FastAPI (see\n",
     "[FastAPI HTTP Deployments](https://docs.ray.io/en/latest/serve/http-servehandle.html#fastapi-http-deployments) for more info).\n",
     "\n",
-    "This routing function’s name doesn’t have to be `router`. Serve use your function name to namespace the route. For example the router will be accessible via `http://localhost:8000/router?txt=your-data`. You can change the function name or explicitly provider a route_prefix to Ray Serve via `@serve.deployment(route_prefix=\"/...\")`. \n",
+    "This routing function’s name doesn’t have to be `router`. Serve uses your function name to namespace the route. For example the router will be accessible via `http://localhost:8000/router?txt=your-data`. You can change the function name or explicitly provider a `route_prefix` to Ray Serve via `@serve.deployment(route_prefix=\"/...\")`. \n",
     "\n",
     "Since `@serve.deployment` makes `router` a `Deployment` object, it can be\n",
     "deployed using `router.deploy()`:"
