Move info about storing state to a note

--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -598,12 +598,14 @@
     "call the `self.summarize` function on it without loading the model on each\n",
     "query.\n",
     "\n",
-    "Instance variables can also store state. For example, to\n",
-    "count the number of requests served, a `@serve.deployment` class can define\n",
-    "a `self.counter` instance variable in its `__init__` function and set it\n",
-    "to 0. When the class is queried, it can increment the `self.counter`\n",
-    "variable inside of the function responding to the query. The `self.counter`\n",
-    "will keep track of the number of requests served across requests.\n",
+    ">**Note**\n",
+    ">\n",
+    ">Instance variables can also store state. For example, to\n",
+    ">count the number of requests served, a `@serve.deployment` class can define\n",
+    ">a `self.counter` instance variable in its `__init__` function and set it\n",
+    ">to 0. When the class is queried, it can increment the `self.counter`\n",
+    ">variable inside of the function responding to the query. The `self.counter`\n",
+    ">will keep track of the number of requests served across requests.\n",
     "\n",
     "HTTP queries for the Ray Serve class deployments follow a similar format to Ray\n",
     "Serve function deployments. Here’s an example client script for the\n",
