--- a/ray-serve/e2e/tutorial.ipynb
+++ b/ray-serve/e2e/tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "younger-content",
+   "id": "widespread-click",
    "metadata": {},
    "source": [
     "\n",
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continental-travel",
+   "id": "packed-cursor",
    "metadata": {},
    "source": [
     "[Open in colab](https://colab.research.google.com/github/anyscale/academy/blob/main/ray-serve/e2e/tutorial.ipynb)"
@@ -19,10 +19,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "controversial-paradise",
+   "id": "optical-hostel",
    "metadata": {},
    "source": [
-    "# Introduction\n",
+    "# Model Deployment with Ray Serve: Introduction\n",
     "\n",
     "This tutorial has few goals in mind. \n",
     "\n",
@@ -30,21 +30,31 @@
     "2. Teach you how to deploy any Python based model with Ray Serve, and compose them for production ready pipelines.\n",
     "3. Show you the concrete steps required to deploy models for interactive REST endpoint.\n",
     "\n",
-    "If you any question about this tutorial, or any follow up questions, please feel free to ask in the [Ray discussion forum](https://discuss.ray.io/c/ray-serve/6)"
+    "If you any question about this tutorial, or any follow up questions, please feel free to ask in the [Ray discussion forum](https://discuss.ray.io/c/ray-serve/6)."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "experienced-uganda",
+   "id": "straight-conflict",
    "metadata": {},
    "source": [
     "# 1 Landscape of ML Tools\n",
-    "TODO"
+    "\n",
+    "Where does Ray Serve fits in the lanscape of machine learning deployment tools? \n",
+    "\n",
+    "Commonly there's a spectrum of tools:\n",
+    "- People typically starts with either framework specific servers (TFServing, TorchServer) or web servers (Flask, FastAPI) as an easy start to deploy a single model. \n",
+    "- For more \"production-readiness\", various custom toolings are added (Docker, K8s, Golang based microservices). \n",
+    "- But you can't just maintain a glued-together system. Folks starting looking for special purpose deployment tools (KubeFlow, KServe, Triton, etc) to manage and deploy many models in production. \n",
+    "\n",
+    "Over the spectrum, our team observe that you have to trade-off ease of development with production scalability. Ray Serve lets you easily develop locally and then transparently scale to production.\n",
+    "\n",
+    "![Serve aims at both ease of development and ready for production.](serve-position.svg)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "rotary-davis",
+   "id": "ignored-geology",
    "metadata": {},
    "source": [
     "# 2 Model Serving with Ray Serve\n",
@@ -61,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "impressed-packaging",
+   "id": "stone-northeast",
    "metadata": {
     "hide-output": false
    },
@@ -80,7 +90,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consecutive-drinking",
+   "id": "intensive-germany",
    "metadata": {},
    "source": [
     "For this tutorial, we’ll use [HuggingFace’s SummarizationPipeline](https://huggingface.co/docs/transformers/main_classes/pipelines#transformers.SummarizationPipeline)\n",
@@ -90,7 +100,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "mexican-adventure",
+   "id": "considered-youth",
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "understood-junction",
+   "id": "nutritional-tooth",
    "metadata": {},
    "source": [
     "## Example Model\n",
@@ -119,7 +129,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "conceptual-logistics",
+   "id": "happy-dynamics",
    "metadata": {
     "hide-output": false
    },
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "appointed-comparative",
+   "id": "assigned-stationery",
    "metadata": {},
    "source": [
     "The Python file, called `local_model.py`, uses the `summarize` function to\n",
@@ -198,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "obvious-stuart",
+   "id": "immediate-macedonia",
    "metadata": {},
    "source": [
     "Keep in mind that the `SummarizationPipeline` is an example machine learning\n",
@@ -215,7 +225,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "technological-egypt",
+   "id": "domestic-cheese",
    "metadata": {},
    "source": [
     "## Converting to Ray Serve Deployment\n",
@@ -230,7 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "faced-explanation",
+   "id": "mexican-atlanta",
    "metadata": {
     "hide-output": false
    },
@@ -242,7 +252,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "young-klein",
+   "id": "enormous-income",
    "metadata": {},
    "source": [
     "After these imports, we can include our model code from above.\n",
@@ -254,7 +264,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "adaptive-recognition",
+   "id": "bright-holmes",
    "metadata": {
     "hide-output": false
    },
@@ -271,7 +281,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "baking-reggae",
+   "id": "personalized-attachment",
    "metadata": {},
    "source": [
     "Ray Serve needs to run on top of a Ray cluster, so we create a local one.\n",
@@ -286,7 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "altered-influence",
+   "id": "genuine-effort",
    "metadata": {
     "hide-output": false
    },
@@ -326,7 +336,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "dated-commons",
+   "id": "about-toner",
    "metadata": {
     "hide-output": false
    },
@@ -358,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "egyptian-induction",
+   "id": "documented-coverage",
    "metadata": {},
    "source": [
     "Now that we have defined our `summarize` function, connected to a Ray\n",
@@ -371,7 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "passing-clone",
+   "id": "harmful-thriller",
    "metadata": {
     "hide-output": false
    },
@@ -385,7 +395,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "postal-bottom",
+   "id": "resident-subject",
    "metadata": {},
    "source": [
     "- In line 1, we add the decorator `@serve.deployment`\n",
@@ -416,7 +426,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "disturbed-bookmark",
+   "id": "mature-radical",
    "metadata": {
     "hide-output": false
    },
@@ -437,7 +447,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "interesting-setting",
+   "id": "retired-sheep",
    "metadata": {},
    "source": [
     "Once we deploy `router`, we can query the model over HTTP."
@@ -445,7 +455,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-reply",
+   "id": "brown-first",
    "metadata": {},
    "source": [
     "## Testing the Ray Serve Deployment\n",
@@ -478,7 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "humanitarian-state",
+   "id": "looking-preliminary",
    "metadata": {
     "hide-output": false
    },
@@ -534,7 +544,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "double-chapter",
+   "id": "caring-investigation",
    "metadata": {},
    "source": [
     "## Using Classes in the Ray Serve Deployment\n",
@@ -551,7 +561,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "reliable-anderson",
+   "id": "civic-tenant",
    "metadata": {
     "hide-output": false
    },
@@ -586,7 +596,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "compliant-defendant",
+   "id": "adult-sight",
    "metadata": {},
    "source": [
     "In this configuration, we can query the `Summarizer` class directly.\n",
@@ -617,7 +627,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "annual-mistress",
+   "id": "residential-maria",
    "metadata": {
     "hide-output": false
    },
@@ -650,7 +660,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-german",
+   "id": "above-removal",
    "metadata": {},
    "source": [
     "## Adding Functionality with FastAPI\n",
@@ -674,7 +684,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "raised-injection",
+   "id": "assured-coordinate",
    "metadata": {},
    "outputs": [
     {
@@ -693,7 +703,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "collaborative-canadian",
+   "id": "surprised-sweden",
    "metadata": {
     "hide-output": false
    },
@@ -750,7 +760,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "conceptual-velvet",
+   "id": "micro-oakland",
    "metadata": {},
    "source": [
     "The class now exposes the same route but with the following feature:\n",
@@ -772,7 +782,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "sized-diesel",
+   "id": "decimal-british",
    "metadata": {
     "hide-output": false
    },
@@ -805,7 +815,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fancy-bonus",
+   "id": "democratic-cooperative",
    "metadata": {},
    "source": [
     "Congratulations! You just built and deployed a machine learning model on Ray\n",
@@ -814,39 +824,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "enormous-cement",
+   "metadata": {},
+   "source": [
+    "# 3 Deploying to Cloud Endpoint\n",
+    "\n",
+    "Now the Ray Serve endpoint is ready for production! It has request validation, it efficiently use memory, and you can transparently scale it out. But you can't just keep this running as a notebook for live serving instances. \n",
+    "\n",
+    "Here are some practical recommednations to deployment:\n",
+    "- For quick demo, use [ngrok](https://ngrok.com/) to expose your local port to the internet. \n",
+    "- For running on GCP for quick proof of concept, use Google Cloud Run to run a containerized application. \n",
+    "- For production deployment, use [Kubernetes with Ray operator](https://docs.ray.io/en/latest/serve/deployment.html#deploying-on-kubernetes) or hosted provider like [Anyscale](anysclae.com).\n",
+    "\n",
+    "### Cloud Run Example\n",
+    "You can take a look at the "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "alleged-consortium",
+   "metadata": {},
+   "source": [
+    "# 4 Bonus: Real World Model Composition\n",
+    "\n",
+    ".. TODO\n",
+    "\n",
+    "\n",
+    "!["
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "intended-branch",
+   "execution_count": 1,
+   "id": "noted-currency",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
-   "cell_type": "markdown",
-   "id": "sixth-canvas",
-   "metadata": {},
-   "source": [
-    "# 3 Deploying to Cloud Endpoint\n",
-    "\n",
-    "Now the Ray Serve endpoint is ready for production! It has request validation, it efficiently use memory, and you can transparently scale it out. \n",
-    "\n",
-    ".. TODO"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "emotional-conversation",
-   "metadata": {},
-   "source": [
-    "# 4 Bonus: Real World Model Composition\n",
-    "\n",
-    ".. TODO"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "harmful-immunology",
+   "id": "fifty-apartment",
    "metadata": {},
    "outputs": [],
    "source": []
